--- a/server/.gitignore
+++ b/server/.gitignore
@@ -7,10 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-client/node_modules
-server/node_modules
-server/.env
-client/.env
+node_modules
+.env
 dist
 dist-ssr
 *.local
